fix: increase the z-index of navigation button

--- a/packages/common/src/ui/components/Drawer/DrawerNavigation.module.scss
+++ b/packages/common/src/ui/components/Drawer/DrawerNavigation.module.scss
@@ -13,6 +13,7 @@
   :global(.ant-btn-icon-only) {
     height: size_unit(5);
     width: size_unit(5);
+    z-index: 1;
   }
   @media (max-width: $breakpoint-popup) {
     border-bottom: none;
